Enable building the demo app for ARM